--- a/index.html
+++ b/index.html
@@ -10,20 +10,108 @@
 </head>
 
 <body>
-  <div>
-    <div class="cabecalho">
-      <img class="logo" src="img/onlygames5.png" alt="Logo do site OnlyGames" title="OnlyGames">
+
+  <div class="container">
+    <div class="bolhas">
+      <span style="--i:11"></span>
+      <span style="--i:17"></span>
+      <span style="--i:25"></span>
+      <span style="--i:14"></span>
+      <span style="--i:5"></span>
+      <span style="--i:28"></span>
+      <span style="--i:14"></span>
+      <span style="--i:19"></span>
+      <span style="--i:3"></span>
+      <span style="--i:20"></span>
+      <span style="--i:30"></span>
+      <span style="--i:17"></span>
+      <span style="--i:5"></span>
+      <span style="--i:24"></span>
+      <span style="--i:5"></span>
+      <span style="--i:3"></span>
+      <span style="--i:9"></span>
+      <span style="--i:18"></span>
+      <span style="--i:11"></span>
+      <span style="--i:17"></span>
+      <span style="--i:25"></span>
+      <span style="--i:14"></span>
+      <span style="--i:5"></span>
+      <span style="--i:28"></span>
+      <span style="--i:14"></span>
+      <span style="--i:19"></span>
+      <span style="--i:3"></span>
+      <span style="--i:20"></span>
+      <span style="--i:30"></span>
+      <span style="--i:17"></span>
+      <span style="--i:5"></span>
+      <span style="--i:24"></span>
+      <span style="--i:5"></span>
+      <span style="--i:3"></span>
+      <span style="--i:9"></span>
+      <span style="--i:18"></span>
+      <span style="--i:11"></span>
+      <span style="--i:17"></span>
+      <span style="--i:25"></span>
+      <span style="--i:14"></span>
+      <span style="--i:5"></span>
+      <span style="--i:28"></span>
+      <span style="--i:14"></span>
+      <span style="--i:19"></span>
+      <span style="--i:3"></span>
+      <span style="--i:20"></span>
+      <span style="--i:30"></span>
+      <span style="--i:17"></span>
+      <span style="--i:5"></span>
+      <span style="--i:24"></span>
+      <span style="--i:5"></span>
+      <span style="--i:3"></span>
+      <span style="--i:9"></span>
+      <span style="--i:18"></span>
+      <span style="--i:11"></span>
+      <span style="--i:17"></span>
+      <span style="--i:25"></span>
+      <span style="--i:14"></span>
+      <span style="--i:5"></span>
+      <span style="--i:28"></span>
+      <span style="--i:14"></span>
+      <span style="--i:19"></span>
+      <span style="--i:3"></span>
+      <span style="--i:20"></span>
+      <span style="--i:30"></span>
+      <span style="--i:17"></span>
+      <span style="--i:5"></span>
+      <span style="--i:24"></span>
+      <span style="--i:5"></span>
+      <span style="--i:3"></span>
+      <span style="--i:9"></span>
+      <span style="--i:18"></span>
+
 
     </div>
+  </div>
+  <div class="cabecalho">
+    <img class="logo" src="img/gameground.png" alt="Logo do site OnlyGames" title="OnlyGames">
 
-    <div class="dado">
+  </div>
+
+  <section class="flex-container">
+
+    <div class="dado design">
       <a href="dado.html"> <img src="img/botaoDado.png" id="dadoBotao" alt="jogo do dado" title="Jogo do dado"> </a>
     </div>
 
-    <div class="jogoDaVelha">
+    <div class="jogoDaVelha design">
       <a href="jogodavelha.html"> <img src="" id="velhaBotao" alt="jogo da velha" title="Jogo da Velha"> </a>
     </div>
-  </div>
+
+    <div class="jogo2 design">
+      <a href="jogodavelha.html"> <img src="" id="velhaBotao" alt="jogo da velha" title="Jogo da Velha"> </a>
+    </div>
+
+    <div class="jogo3 design">
+      <a href="jogodavelha.html"> <img src="" id="velhaBotao" alt="jogo da velha" title="Jogo da Velha"> </a>
+    </div>
+  </section>
 
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
